# analyzer/app.py
@@ -28,8 +28,6 @@ with open("./config/log_conf.yml", "r") as f:
 
 logger = logging.getLogger('basicLogger')
 
-STATS_FILE_PATH = app_config['datastore']['filename']
-
 EVENTSTORE_CLIENTCASE_URL = app_config['eventstores']['clientcase']['url']
 EVENTSTORE_SURVEY_URL = app_config['eventstores']['survey']['url']
 
@@ -95,6 +93,35 @@ def get_stats():
     logger.info(f"Returning event stats: {stats}")
     return jsonify(stats), 200
 
+def get_event_ids_and_trace_ids(event_type):
+    consumer = topic.get_simple_consumer(reset_offset_on_start=True, consumer_timeout_ms=1000)
+    
+    event_list = []
+    
+    for msg in consumer:
+        message = msg.value.decode("utf-8")
+        data = json.loads(message)
+        
+        if data["type"] == event_type:
+            event_info = {
+                "event_id": data["payload"]["event_id"],
+                "trace_id": data["payload"]["trace_id"]
+            }
+            event_list.append(event_info)
+    
+    if event_list:
+        return jsonify(event_list), 200
+    else:
+        return {"message": f"No {event_type} events found!"}, 404
+
+
+def get_clientcase_event_ids():
+    return get_event_ids_and_trace_ids("clientcase")
+
+# Endpoint for survey event IDs and trace IDs
+def get_survey_event_ids():
+    return get_event_ids_and_trace_ids("survey")
+
 
 # app = connexion.FlaskApp(__name__, specification_dir='')
 
@@ -111,6 +138,9 @@ if "CORS_ALLOW_ALL" in os.environ and os.environ["CORS_ALLOW_ALL"] == "yes":
     )    
 
 app.add_api("openapi.yml", base_path="/analyzer", strict_validation=True, validate_responses=True)
+
+# app.app.add_url_rule('/ccc/clientcase_ids', 'get_clientcase_event_ids', get_clientcase_event_ids, methods=['GET'])
+# app.app.add_url_rule('/ccc/survey_ids', 'get_survey_event_ids', get_survey_event_ids, methods=['GET'])
 
 
 
